# reconparser

./: LICENSE  PYPI_RELEASE.md  README.md  pyproject.toml  requirements.txt
examples/: README.md  parse_ale_example.py  parse_alerax_example.py  test_file_detection.py  test_with_real_data.py
src/reconparser/: __init__.py
src/reconparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reconparser/parsers/: __init__.py  ale.py
