[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconparser"
version = "0.1.0"
description = "A Python library for parsing phylogenetic reconciliation outputs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Adrian A. Davin", email = "aaredav@gmail.com"},
]
maintainers = [
  {name = "Adrian A. Davin", email = "aaredav@gmail.com"},
]
keywords = [
    "phylogenetics",
    "reconciliation",
    "bioinformatics",
    "phylogeny",
    "gene-tree",
    "species-tree",
    "ALE",
    "horizontal-gene-transfer",
    "duplication",
    "loss"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "ete3>=3.1.2",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/aadavin/reconparser"
"Bug Tracker" = "https://github.com/aadavin/reconparser/issues"
"Documentation" = "https://github.com/aadavin/reconparser#readme"
"Source Code" = "https://github.com/aadavin/reconparser"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0"
]

[tool.setuptools]
packages = ["reconparser", "reconparser.parsers"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
reconparser = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
